alignment fix

--- a/src/SearchPage/TagSearchbar.css
+++ b/src/SearchPage/TagSearchbar.css
@@ -152,7 +152,7 @@
 }
 
 .HelpTagsListOverlay.mobile {
-    top: 4.5em;
+    top: 4.4em;
     max-width: 100%;
     height: 100%;
     max-height: 70vh;
@@ -190,7 +190,7 @@
 
 .tagListSearchBar {
     height: auto;
-    background-color: var(--COLOR1);
+    background-color: var(--COLOR3);
     padding-bottom:1em;
     overflow-y: auto;
     overflow-x: hidden;
@@ -201,4 +201,9 @@
     width: auto;
     place-content: center;
     overscroll-behavior: none;
+}
+
+.tagListSearchBar.mobile {
+    padding-top:1em;
+    background-color: var(--COLOR1);
 }
